--- a/biNUICLeAR/biNUICLeAR.csproj
+++ b/biNUICLeAR/biNUICLeAR.csproj
@@ -53,6 +53,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Animator.cs" />
     <Compile Include="PathFinder.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player.cs" />
@@ -68,6 +69,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Graphics\Actor.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Graphics\tileblock.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
