--- a/biNUICLeAR/biNUICLeAR.csproj
+++ b/biNUICLeAR/biNUICLeAR.csproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Animator.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="PathFinder.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player.cs" />
