--- a/biNUICLeAR/biNUICLeAR.csproj
+++ b/biNUICLeAR/biNUICLeAR.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Animator.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="EnemyCoordinates.cs" />
     <Compile Include="MapReader.cs" />
     <Compile Include="PathFinder.cs" />
     <Compile Include="Game1.cs" />
